fix: add info for auto stretching

--- a/src/Stack/Stack.scss
+++ b/src/Stack/Stack.scss
@@ -2,7 +2,7 @@
 
 .pgn__vstack,
 .pgn__hstack {
-  display: inline-flex;
+  display: flex;
   align-self: stretch;
   gap: $stack-gap;
 
